--- a/gaj-data-analysis/research/NeuralNets/gaussian-restricted-boltzmann.tex
+++ b/gaj-data-analysis/research/NeuralNets/gaussian-restricted-boltzmann.tex
@@ -279,7 +279,7 @@ Hence, the gradient of the log-likelihood with respect to $u_{iy}$ is
 \begin{eqnarray}
 \frac{\partial\c{L}_{\c{Y}|\c{X}}}{\partial u_{iy}}
 & = & 
-\frac{1}{N}\sum_{d=1}^N\left\{
+\frac{1}{N}\sum_{d=1}^N\left\{\rule{0pt}{5mm}
 \delta_{y,y_d}\,p(h_i=1\;|\;\v{x}_d,y,\Theta)\right.
 \nonumber\\&&
 {}-\left.\frac{e^{c_{y}}\prod_{i'=1}^{H}\left[1+e^{b_{i'}+ \v{w}_{i'}^T\v{x}_d+u_{i'y}}\right]}
